--- a/ejercicio.css
+++ b/ejercicio.css
@@ -3,14 +3,14 @@
 }
 
 .contenedor {
-    background-color: black;
+    background-color: rgb(55, 109, 209);
     margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: 3px red solid;
+    margin-left: 0px;
+    margin-right: 0px;
+    border: 3px rgb(14, 0, 0) solid;
     width: 100%;
     height: 50px;
-    border-radius: 20px;
+    border-radius: 10px;
 }   
 
 .boton {
@@ -19,10 +19,9 @@
 }
 
 button:hover {
-    margin-left: 5px;
-    border: turquoise solid;
-    text-align: center;
-    align-items: center;
+    border: white solid;
+    background-color: black;
+    color: white;
 }
 
 .circulo {
