--- a/ejercicio.css
+++ b/ejercicio.css
@@ -1,47 +1,60 @@
 * {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
 }
 
+/*menu*/
 .contenedor {
     background-color: rgb(55, 109, 209);
     margin-top: 10px;
-    margin-left: 0px;
-    margin-right: 0px;
     border: 3px rgb(14, 0, 0) solid;
-    width: 100%;
-    height: 50px;
+    height: 60px;
     border-radius: 10px;
-}   
+}
+
+.contenedor img {
+    float: left;
+    width: 50px;
+    height: 50px;
+    margin: 4px;
+    border-radius: 5px;
+}
 
 .boton {
-    margin-left: 45%;
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    margin-right: 5px;
 }
 
 button:hover {
     border: white solid;
     background-color: black;
     color: white;
+    border-radius: 5px;
 }
 
-.circulo {
-    margin-left: 5%;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: black;
-    border: salmon solid 3px;
-}
-
-.cuadrado {
+/*figuras*/
+.op {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-left: 20%;
-    width: 100px;
-    height: 100px;
-    background:cornflowerblue;
+    margin-right: 20%;
+    }
+
+article {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: solid black 2px;
+    width: 200px;
+    height: 200px;
+    margin-left: 2%;
 }
 
 .cuadro-tricolor {
-    margin-left: 20%;
     width: 0;
     height: 0;
     border-left: 100px solid blue;
@@ -49,8 +62,39 @@ button:hover {
     border-bottom: 50px solid red;
 }
 
+.circulo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+    border: salmon solid 3px;
+}
+
+.triangulo {
+    width: 0;
+    height: 0;
+    border-bottom: 100px tomato solid;
+    border-left: 50px transparent solid;
+    border-right: 50px transparent solid;
+}
+
+.ovalo {
+    width: 150px;
+    height: 100px;
+    background-color: teal;
+    border-radius: 50%;
+    border: black solid;
+}
+
+.rombo {
+    width: 100px;
+    height: 100px;
+    background: blueviolet;
+    transform: rotate(45deg);
+    border: cornflowerblue solid 3px;
+}
+
 .pacman-tricolor {
-    margin-left: 20%;
     width: 0;
     height: 0;
     border-right: 50px solid transparent;
@@ -60,6 +104,4 @@ button:hover {
     border-radius: 50px;
 }
 
-.op div {
-    display: inline-flex;    
-}
+/*footer*/
